@@ -16,8 +16,8 @@
 
 package org.opensaml.saml2.metadata.provider;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.CopyOnWriteArrayList;
 
 /**
  * An observable base implementation of metadata providers. An observer that clears the descriptor index kept by
@@ -27,12 +27,12 @@ public abstract class AbstractObservableMetadataProvider extends AbstractMetadat
         ObservableMetadataProvider {
 
     /** List of registered observers. */
-    private ArrayList<Observer> observers;
+    private List<Observer> observers;
 
     /** Constructor. */
     public AbstractObservableMetadataProvider() {
         super();
-        observers = new ArrayList<Observer>();
+        observers = new CopyOnWriteArrayList<Observer>();
         observers.add(new DescriptorIndexClearingObserver());
     }
 
